testdata/golden/hir_borrow/invalid/mut_borrow_excludes_other.hir
error SEM3018 testdata/golden/hir_borrow/invalid/mut_borrow_excludes_other.sg:4:19 cannot take shared borrow of 'x' while an exclusive borrow is active

== HIR ==
module 

fn t() -> nothing (id=1, sym=1134) {
  let mut x: int [copy] = 1
  let m: &mut int [&mut] = (&mut x): &mut int
  let r: &int [&] = (& x): &int
  return
}

borrow edges:
  L2269(m) (&mut) borrows L2268(x) at 0:55-61 scope=S3
events:
  borrow_start L2269(m) -> L2268(x) (&mut) at 0:55-61 scope=S3 note="B1"
  borrow_start _ -> L2268(x) at 0:81-83 scope=S3 note="issue=conflict_mut borrow=B1"
  borrow_end L2269(m) -> L2268(x) scope=S3 note="scope_end B1"
move plan:
  L2268(x): MoveCopy (copy type)
  L2269(m): MoveAllowed (non-copy reference)
  L2270(r): MoveCopy (copy type)

